<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnBeginner"
        style="@style/buttonStyle"
        android:drawablePadding="8dp"
        android:text="@string/beginner_level" />

    <Button
        android:id="@+id/btnIntermediate"
        style="@style/buttonStyle"
        android:drawablePadding="8dp"
        android:layout_marginTop="40dp"
       android:text="@string/intermediate_level" />
    <Button
        android:id="@+id/btnAdvanced"
        style="@style/buttonStyle"
        android:drawablePadding="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/advanced_level" />

</LinearLayout>