<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/foundationTest_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/foundation_program_dummy_test"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/foundation_program_test_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/test"
        android:textSize="23sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/foundation_program_test_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:hint="@string/test_question"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="20sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/foundationProgramSubmitButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="@string/submit"
            android:textAllCaps="false" />
    </FrameLayout>

</LinearLayout>