<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical"
    tools:context="com.rudigo.android.maths.BlcLesson2Activity">

    <TextView
        android:id="@+id/blc_lesson2_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/blc_lesson_2"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/lesson_2_instruction"
        android:textSize="18sp" />

       <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:horizontalSpacing="2dp"
            android:listSelector="#0f0"
            android:numColumns="5" />

        <Button
            android:id="@+id/blc_lesson2_repeatButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:text="@string/repeat"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/blc_lesson2_testButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:text="@string/test"
            android:textAllCaps="false"
            android:visibility="visible" />

    </FrameLayout>

</LinearLayout>
